# pycounts_tb

./: .buildinfo  CHANGELOG.md  CONTRIBUTING.md  README.md  changelog.html  conduct.html  contributing.html  example.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: ci-cd.yml
_sources/autoapi/: index.rst.txt
_sources/autoapi/pycounts_tb/: index.rst.txt
_sources/autoapi/pycounts_tb/data/: index.rst.txt
_sources/autoapi/pycounts_tb/datasets/: index.rst.txt
_sources/autoapi/pycounts_tb/plotting/: index.rst.txt
_sources/autoapi/pycounts_tb/pycounts_tb/: index.rst.txt
autoapi/: index.html
autoapi/pycounts_tb/: index.html
autoapi/pycounts_tb/data/: index.html
autoapi/pycounts_tb/datasets/: index.html
autoapi/pycounts_tb/plotting/: index.html
autoapi/pycounts_tb/pycounts_tb/: index.html
docs/: Makefile  example.ipynb  make.bat
tests/: test_pycounts_tb.py
